--- a/careers.html
+++ b/careers.html
@@ -14,7 +14,9 @@
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@susingroup">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <script type="application/ld+json">
         {
@@ -83,6 +85,7 @@
     </script>
 </head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <nav class="navbar">
         <div class="container">
             <div class="topbar" role="region" aria-label="Top utility bar">
