--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <meta property="og:type" content="website">
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <meta property="og:title" content="Contact Susin Group — Sales, Support & Offices">
     <meta property="og:description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations.">
     <meta property="og:url" content="https://www.susingroup.com/contact-support-sales.html">
@@ -48,6 +51,7 @@
                         <a href="mailto:info@susin.in" class="topbar-contact"><i class="fas fa-envelope"></i> info@susin.in</a>
                     </div>
                     <div class="topbar-right">
+                        <a class="skip-link" href="#main-content">Skip to content</a>
                         <a href="index.html#recent-projects" class="topbar-link">Recent Projects</a>
                         <a href="#" class="topbar-link">Global Presence</a>
                         <div class="topbar-actions">
