--- a/global-presence/susin-itork-india.html
+++ b/global-presence/susin-itork-india.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#c41e3a">
+    <link rel="apple-touch-icon" href="/assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
     <title>Susin I-Tork India — Global Presence</title>
     <meta name="description" content="Susin I-Tork India — valve automation and actuator manufacturing, operations and milestones. Contact details and team." />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/logo.jpg">
     <link rel="canonical" href="https://www.susingroup.com/global-presence/susin-itork-india.html" />
@@ -36,6 +46,7 @@
         </script>
 </head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
