--- a/industries-served.html
+++ b/industries-served.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Industries Served — Oil & Gas, Water, Power & More">
     <meta property="og:description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
@@ -70,6 +73,7 @@
                     <span class="logo-text">Industrial Solutions</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
+                    <a class="skip-link" href="#main-content">Skip to content</a>
                     <li class="lang-selector">
                         <a href="#" class="lang-toggle">
                             <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
