--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -10,6 +10,16 @@
     <meta name="theme-color" content="#c41e3a">
     <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
     <meta name="robots" content="index, follow">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
     <meta property="og:site_name" content="Susin Group">
     <meta name="twitter:site" content="@susingroup">
     <meta name="twitter:creator" content="@susingroup">
@@ -42,8 +52,9 @@
       "description": "Complete product portfolio of industrial actuators and gearboxes for motion control applications"
     }
     </script>
-  </head>
+</head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
