--- a/services-installation-maintenance.html
+++ b/services-installation-maintenance.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <title>Services — Installation, Maintenance & Support for Actuators</title>
     <meta name="description" content="Services including installation, commissioning, maintenance, training, customization and spare parts for industrial actuators and gearboxes.">
     <meta name="keywords" content="installation, commissioning, maintenance, technical support, training, customization, spare parts, repair services">
@@ -35,8 +45,9 @@
       "serviceType": "Industrial actuator & gearbox services"
     }
     </script>
-  </head>
+</head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
