--- a/services.html
+++ b/services.html
@@ -52,7 +52,8 @@
         }
         </script>
     </head>
-<body>
+    <body>
+        <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
