--- a/about-industrial-actuators.html
+++ b/about-industrial-actuators.html
@@ -10,6 +10,9 @@
     <link rel="icon" href="logo.jpg">
 
     <!-- Performance hints -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="preload" href="css/style.css" as="style">
@@ -39,8 +42,9 @@
       "description": "About Susin Group — manufacturer of industrial actuators and gearboxes."
     }
     </script>
-  </head>
+    </head>
 <body>
+        <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
