--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
         <meta name="theme-color" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
         <meta property="og:site_name" content="Susin Group">
         <meta name="twitter:site" content="@susingroup">
         <meta name="twitter:creator" content="@susingroup">
@@ -49,7 +52,8 @@
         }
         </script>
     </head>
-<body>
+    <body>
+        <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
