--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <meta name="theme-color" content="#0a6ebd">
     <meta name="format-detection" content="telephone=no">
     <link rel="apple-touch-icon" href="logo.jpg">
@@ -34,8 +44,9 @@
       "url": "https://www.susingroup.com/resources-technical-docs.html"
     }
     </script>
-  </head>
+</head>
 <body>
+    <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
