--- a/resources.html
+++ b/resources.html
@@ -48,7 +48,8 @@
         }
         </script>
     </head>
-<body>
+    <body>
+        <a class="skip-link" href="#main-content">Skip to content</a>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
