--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -9,6 +9,9 @@
     <link rel="canonical" href="https://www.susingroup.com/contact-support-sales.html" />
     <link rel="icon" href="logo.jpg">
 
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="preload" href="css/style.css" as="style">
@@ -17,9 +20,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <meta property="og:type" content="website">
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
     <meta property="og:title" content="Contact Susin Group — Sales, Support & Offices">
     <meta property="og:description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations.">
     <meta property="og:url" content="https://www.susingroup.com/contact-support-sales.html">
