--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="format-detection" content="telephone-no">
+        <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
