--- a/index.html
+++ b/index.html
@@ -233,26 +233,53 @@
     
         <main id="main-content">
 
-        <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-overlay"></div>
-        <div class="container">
-            <div class="hero-content">
-                <h1>Advanced Motion Control Solutions</h1>
-                <p>Leading manufacturer of industrial actuators, gearboxes, and motion control systems for critical applications worldwide</p>
-                <div class="hero-buttons" style="animation: fadeInUp 1.2s ease-out 0.4s both;">
-                    <a href="products.html" class="btn btn-primary">
-                        <span>Explore Products</span>
-                        <i class="fas fa-arrow-right"></i>
-                    </a>
-                    <a href="contact.html" class="btn btn-secondary">
-                        <span>Get Quote</span>
-                        <i class="fas fa-envelope"></i>
-                    </a>
+        <!-- Advanced Hero Section -->
+        <section class="hero-advanced">
+            <div class="container">
+                <div class="hero-grid">
+                    <div class="hero-panel">
+                        <p class="eyebrow">Industrial Motion Control • Since 2007</p>
+                        <h1>Precision Actuators. Robust Gearboxes. Trusted Performance.</h1>
+                        <p class="lead">Designing and manufacturing industrial actuators and gearboxes for demanding environments — with global support, local service and engineering-led solutions.</p>
+
+                        <div class="hero-cta">
+                            <a href="products.html" class="btn btn-primary btn-large">Explore Products</a>
+                            <a href="contact.html" class="btn btn-secondary btn-large">Request Quote</a>
+                        </div>
+
+                        <ul class="hero-stats" aria-hidden="true">
+                            <li><strong>1000+</strong><span>Installed Systems</span></li>
+                            <li><strong>45</strong><span>Countries Served</span></li>
+                            <li><strong>24/7</strong><span>Service & Support</span></li>
+                        </ul>
+                    </div>
+                    <div class="hero-media" aria-hidden="true">
+                        <picture>
+                            <source srcset="assets/img/hero-large.webp" type="image/webp">
+                            <img src="assets/img/hero-large.jpg" alt="Actuators and gearboxes in industrial setting" loading="lazy" class="hero-image">
+                        </picture>
+                    </div>
+                </div>
+
+                <div class="features-grid">
+                    <article class="feature-card">
+                        <i class="fas fa-cogs feature-icon"></i>
+                        <h3>Engineered Reliability</h3>
+                        <p>In-house design and rigorous testing for long lifecycle and low maintenance.</p>
+                    </article>
+                    <article class="feature-card">
+                        <i class="fas fa-shipping-fast feature-icon"></i>
+                        <h3>Global Delivery</h3>
+                        <p>Regional support and logistics to meet fast-track deployment timelines.</p>
+                    </article>
+                    <article class="feature-card">
+                        <i class="fas fa-tools feature-icon"></i>
+                        <h3>Service & Commissioning</h3>
+                        <p>Skilled field teams for commissioning, tuning and lifecycle services.</p>
+                    </article>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     <!-- Key Products Section -->
     <section class="products-preview" aria-labelledby="products-heading">
