--- a/index.html
+++ b/index.html
@@ -2,44 +2,54 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#c41e3a">
+        <meta name="msapplication-TileColor" content="#c41e3a">
+        <meta name="msapplication-navbutton-color" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <meta property="og:site_name" content="Susin Group">
         <meta name="twitter:site" content="@susingroup">
         <meta name="twitter:creator" content="@susingroup">
-        <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions</title>
-        <meta name="description" content="Leading manufacturer of actuators and gearboxes — Pneumatic, Electro-Hydraulic and Electrical actuators for critical industrial applications worldwide.">
-        <meta name="keywords" content="industrial actuators, pneumatic actuators, gearboxes, electro-hydraulic actuators, electrical actuators, motion control, automation">
+        <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions | Susin Group</title>
+        <meta name="description" content="Leading manufacturer of industrial actuators, gearboxes & motion control solutions. Pneumatic, electro-hydraulic & electrical actuators for critical automation applications worldwide. ✓ 25+ Years Experience ✓ Global Presence">
+        <meta name="keywords" content="industrial actuators, pneumatic actuators, gearboxes, electro-hydraulic actuators, electrical actuators, motion control, automation, valve actuators, rotary actuators, linear actuators">
+        <meta name="author" content="Susin Group">
+        <meta name="publisher" content="Susin Group">
+        <meta name="geo.region" content="IN-TN">
+        <meta name="geo.placename" content="Coimbatore">
         <link rel="canonical" href="https://www.susingroup.com/index.html" />
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
-
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-        <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
+        <link rel="dns-prefetch" href="//www.google-analytics.com">
+        <link rel="dns-prefetch" href="//www.googletagmanager.com">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
         <!-- Open Graph / Twitter -->
         <meta property="og:type" content="website">
         <meta property="og:title" content="Industrial Actuators & Gearboxes | Advanced Motion Control Solutions">
-        <meta property="og:description" content="Leading manufacturer of actuators and gearboxes — Pneumatic, Electro-Hydraulic and Electrical actuators for critical industrial applications worldwide.">
-        <meta property="og:url" content="https://www.susingroup.com/index.html">
+        <meta property="og:description" content="Leading manufacturer of industrial actuators, gearboxes & motion control solutions. ✓ 25+ Years Experience ✓ Global Presence">
+        <meta property="og:url" content="https://www.susingroup.com/">
         <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
+        <meta property="og:image:alt" content="Susin Group Industrial Actuators and Gearboxes">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <meta property="og:locale" content="en_US">
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Industrial Actuators & Gearboxes | Susin Group">
+        <meta name="twitter:description" content="Leading manufacturer of industrial motion control solutions. ✓ 25+ Years Experience ✓ Global Presence">
 
         <!-- Structured data -->
         <script type="application/ld+json">
@@ -61,19 +71,59 @@
                 {
                     "@type": "Organization",
                     "name": "Susin Group",
+                    "alternateName": ["Susin I-Tork", "Susin Actuators"],
                     "url": "https://www.susingroup.com",
-                    "logo": "https://www.susingroup.com/assets/img/logo.png",
-                    "description": "Leading manufacturer of industrial actuators and gearboxes for global automation and control applications",
+                    "logo": {
+                        "@type": "ImageObject",
+                        "url": "https://www.susingroup.com/assets/img/logo.png",
+                        "width": 200,
+                        "height": 60
+                    },
+                    "description": "Leading manufacturer of industrial actuators and gearboxes for global automation and control applications with 25+ years of experience",
+                    "foundingDate": "1998",
+                    "numberOfEmployees": "50-200",
                     "address": {
                         "@type": "PostalAddress",
                         "streetAddress": "Coimbatore",
-                        "addressRegion": "TN",
-                        "addressCountry": "IN"
+                        "addressRegion": "Tamil Nadu",
+                        "addressCountry": "IN",
+                        "postalCode": "641001"
                     },
-                    "contactPoint": {
-                        "@type": "ContactPoint",
-                        "telephone": "+91-77080-97242",
-                        "contactType": "Sales"
+                    "contactPoint": [
+                        {
+                            "@type": "ContactPoint",
+                            "telephone": "+91-77080-97242",
+                            "contactType": "Sales",
+                            "areaServed": "Worldwide",
+                            "availableLanguage": ["English", "Hindi", "Tamil"]
+                        },
+                        {
+                            "@type": "ContactPoint",
+                            "email": "info@susingroup.com",
+                            "contactType": "Customer Support"
+                        }
+                    ],
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Industrial Motion Control Products",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Product",
+                                    "name": "Pneumatic Actuators",
+                                    "category": "Industrial Equipment"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Product",
+                                    "name": "Electro-Hydraulic Actuators",
+                                    "category": "Industrial Equipment"
+                                }
+                            }
+                        ]
                     },
                     "sameAs": [
                         "https://www.linkedin.com/company/susin-group",
