--- a/products.html
+++ b/products.html
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#c41e3a">
+        <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
-        <title>Products | Industrial Actuators & Gearboxes</title>
-        <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke rotary actuators, gearboxes, electro-hydraulic and electrical actuators for industrial automation.">
-        <meta name="keywords" content="pneumatic actuators, gearboxes, electro-hydraulic, electrical actuators, industrial automation, motion control, rotary actuators">
+        <title>Industrial Actuators & Gearboxes Products | Pneumatic, Hydraulic & Electrical | Susin Group</title>
+        <meta name="description" content="Complete range of industrial actuators & gearboxes: Pneumatic Scotch Yoke, electro-hydraulic, electrical actuators for automation. ✓ Custom Solutions ✓ 25+ Years Experience ✓ Global Support">
+        <meta name="keywords" content="pneumatic actuators, scotch yoke actuators, gearboxes, electro-hydraulic actuators, electrical actuators, valve actuators, rotary actuators, linear actuators, industrial automation, motion control">
+        <meta name="author" content="Susin Group">
         <link rel="canonical" href="https://www.susingroup.com/products.html" />
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
+        <link rel="dns-prefetch" href="//www.google-analytics.com">
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
