--- a/industries.html
+++ b/industries.html
@@ -2,30 +2,29 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#c41e3a">
+        <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
-        <title>Industries | Industrial Actuators & Gearboxes</title>
-        <meta name="description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
-        <meta name="keywords" content="industrial actuators, oil and gas, water treatment, power generation, chemical processing, marine offshore, pharmaceutical, gearboxes solutions">
+        <title>Industries Served | Oil & Gas, Power, Chemical Actuator Solutions | Susin Group</title>
+        <meta name="description" content="Susin Group serves diverse industries: Oil & Gas, Power Generation, Water Treatment, Chemical Processing & more. ✓ Industry-Specific Solutions ✓ Proven Track Record ✓ Global Projects">
+        <meta name="keywords" content="oil and gas actuators, power generation, water treatment, chemical processing, marine offshore, pharmaceutical, mining, petrochemical, valve automation, industrial actuators">
+        <meta name="author" content="Susin Group">
         <link rel="canonical" href="https://www.susingroup.com/industries.html" />
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
