--- a/about.html
+++ b/about.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#c41e3a">
+        <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <link rel="dns-prefetch" href="https://fonts.googleapis.com">
@@ -16,16 +18,20 @@
         <meta property="og:site_name" content="Susin Group">
         <meta name="twitter:site" content="@susingroup">
         <meta name="twitter:creator" content="@susingroup">
-        <title>About Us | Industrial Actuators & Gearboxes</title>
-        <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide. Learn our history, mission, and certifications.">
-        <meta name="keywords" content="about us, company history, mission values, industrial actuators, gearboxes, certifications, ISO 9001, ATEX, quality excellence">
+        <title>About Susin Group | 25+ Years Industrial Actuator Manufacturing Excellence</title>
+        <meta name="description" content="Leading industrial actuator manufacturer since 1998. ✓ ISO 9001 Certified ✓ Global Presence ✓ 25+ Years Experience. Pneumatic, hydraulic & electrical motion control solutions worldwide.">
+        <meta name="keywords" content="about susin group, company history, mission values, industrial actuators manufacturer, gearboxes, certifications, ISO 9001, ATEX, quality excellence, motion control, automation">
+        <meta name="author" content="Susin Group">
+        <meta name="geo.region" content="IN-TN">
         <link rel="canonical" href="https://www.susingroup.com/about.html" />
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
