--- a/careers.html
+++ b/careers.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
     <meta name="theme-color" content="#c41e3a">
-    <title>Careers — Join Susin Group</title>
-    <meta name="description" content="Explore careers at Susin Group: open positions, internships, benefits and how to apply. Grow your engineering career with us.">
-    <meta name="keywords" content="careers, jobs, engineering jobs, internships, employment, hiring">
+    <meta name="msapplication-TileColor" content="#c41e3a">
+    <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+    <meta name="robots" content="index, follow">
+    <title>Engineering Careers at Susin Group | Join Our Actuator Innovation Team</title>
+    <meta name="description" content="Join Susin Group's engineering team! Open positions in mechanical design, automation & manufacturing. ✓ Competitive Benefits ✓ Growth Opportunities ✓ Innovation Culture">
+    <meta name="keywords" content="mechanical engineering jobs, automation careers, manufacturing jobs, engineering positions, susin group careers, actuator engineering, coimbatore jobs, industrial engineering">
+    <meta name="author" content="Susin Group">
+    <meta name="geo.region" content="IN-TN">
     <link rel="canonical" href="https://www.susingroup.com/careers.html">
     <meta property="og:title" content="Careers — Join Susin Group">
     <meta property="og:description" content="Explore careers at Susin Group: open positions, internships, benefits and how to apply. Grow your engineering career with us.">
@@ -14,10 +24,12 @@
     <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@susingroup">
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <!-- Performance hints -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
         <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
