--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="format-detection" content="telephone=no">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="format-detection" content="telephone=yes">
         <meta name="theme-color" content="#c41e3a">
+        <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <link rel="dns-prefetch" href="https://fonts.googleapis.com">
@@ -16,16 +18,20 @@
         <meta property="og:site_name" content="Susin Group">
         <meta name="twitter:site" content="@susingroup">
         <meta name="twitter:creator" content="@susingroup">
-        <title>Contact Us | Industrial Actuators & Gearboxes</title>
-        <meta name="description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations. We're here to help with motion control solutions.">
-        <meta name="keywords" content="contact us, sales inquiry, technical support, office locations, customer service, inquiry form, support tickets">
+        <title>Contact Susin Group | Get Quote & Technical Support | Industrial Actuators</title>
+        <meta name="description" content="Contact Susin Group for actuator quotes & support. ✓ 24/7 Technical Assistance ✓ Global Offices ✓ Fast Response Time. Call +91-77080-97242 or submit inquiry form.">
+        <meta name="keywords" content="contact susin group, actuator quotes, technical support, sales inquiry, office locations, customer service, inquiry form, support tickets, get quote">
+        <meta name="author" content="Susin Group">
+        <meta name="geo.region" content="IN-TN">
         <link rel="canonical" href="https://www.susingroup.com/contact.html" />
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
