--- a/resources.html
+++ b/resources.html
@@ -2,27 +2,29 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="HandheldFriendly" content="true">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#c41e3a">
+        <meta name="msapplication-TileColor" content="#c41e3a">
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
-        <title>Resources | Industrial Actuators & Gearboxes</title>
-        <meta name="description" content="Datasheets, manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions.">
-        <meta name="keywords" content="technical documentation, datasheets, manuals, sizing programs, CAD drawings, FAQs, actuator selection, product resources">
+        <title>Technical Resources & Downloads | Actuator Datasheets, Manuals | Susin Group</title>
+        <meta name="description" content="Free technical resources: actuator datasheets, installation manuals, sizing programs & CAD drawings. ✓ Instant Downloads ✓ Technical Support ✓ Product Selection Tools">
+        <meta name="keywords" content="actuator datasheets, technical documentation, installation manuals, sizing programs, CAD drawings, product selection, FAQs, technical resources, downloads">
+        <meta name="author" content="Susin Group">
         <link rel="canonical" href="https://www.susingroup.com/resources.html" />
         <link rel="icon" href="logo.jpg">
 
         <!-- Performance hints -->
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
         <link rel="preload" href="css/style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" crossorigin>
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
