--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <ul class="nav-menu" id="navMenu">
                     <li class="lang-selector" role="menuitem">
                         <button type="button" class="lang-toggle" aria-haspopup="menu" aria-expanded="false" id="langToggle">
-                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-globe"></i> EN
                         </button>
                         <ul class="lang-dropdown" role="menu" aria-labelledby="langToggle" id="langDropdown">
                             <li role="none"><a href="#" role="menuitem" data-lang="en" class="active"><i class="fas fa-flag-usa"></i> English</a></li>
@@ -179,7 +179,7 @@
                     </li>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li class="dropdown">
-                        <a href="products-actuators-gearboxes.html">Products <i class="fas fa-chevron-down"></i></a>
+                        <a href="products-actuators-gearboxes.html">Products</a>
                         <ul class="dropdown-menu">
                             <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products.html#gearboxes">Gearboxes</a></li>
@@ -188,7 +188,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="industries-served.html">Industries <i class="fas fa-chevron-down"></i></a>
+                        <a href="industries-served.html">Industries</a>
                         <ul class="dropdown-menu">
                             <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries.html#water-treatment">Water Treatment</a></li>
@@ -199,7 +199,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services-installation-maintenance.html">Services <i class="fas fa-chevron-down"></i></a>
+                        <a href="services-installation-maintenance.html">Services</a>
                         <ul class="dropdown-menu">
                             <li><a href="services.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services.html#maintenance">Maintenance & Support</a></li>
@@ -210,7 +210,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#">Global Presence <i class="fas fa-chevron-down"></i></a>
+                        <a href="#">Global Presence</a>
                         <ul class="dropdown-menu">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
@@ -233,7 +233,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="about-industrial-actuators.html">About Us <i class="fas fa-chevron-down"></i></a>
+                        <a href="about-industrial-actuators.html">About Us</a>
                         <ul class="dropdown-menu">
                             <li><a href="about.html#story">Our Story</a></li>
                             <li><a href="about.html#mission">Mission & Values</a></li>
@@ -242,7 +242,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
+                        <a href="careers.html">Careers</a>
                         <ul class="dropdown-menu">
                             <li><a href="careers.html#openings">Open Positions</a></li>
                             <li><a href="careers.html#life">Life at Susin</a></li>
@@ -253,7 +253,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="resources-technical-docs.html">Resources <i class="fas fa-chevron-down"></i></a>
+                        <a href="resources-technical-docs.html">Resources</a>
                         <ul class="dropdown-menu">
                             <li><a href="resources.html#datasheets">Datasheets</a></li>
                             <li><a href="resources.html#manuals">Manuals</a></li>
@@ -263,7 +263,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="contact-support-sales.html">Contact <i class="fas fa-chevron-down"></i></a>
+                        <a href="contact-support-sales.html">Contact</a>
                         <ul class="dropdown-menu">
                             <li><a href="contact.html#contact-form">Contact Form</a></li>
                             <li><a href="contact.html#sales">Sales Inquiry</a></li>
